--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <div id="footer" class="navbar navbar-inverse navbar-fixed-bottom">
         <footer>
-            <p>&copy; @DateTime.Now.Year - Ricardo Galiardi</p>
+            <p>&copy; ©Copyright 2018 - Hands-on by Ricardo Galiardi - Solutions Architect </p>
         </footer>
     </div>
 
